# moldoc

./: .gitignore  .readthedocs.yaml  LICENSE  README.md  README.rst  justfile  pyproject.toml  setup.py
.github/workflows/: publish_release.yaml  tests.yaml
docs/source/: conf.py  index.rst  modules.rst
docs/source/_templates/: class.rst
src/moldoc/: __init__.py  molDraw.js  moldoc.py  molecule.py
src/moldoc/_internal/: moldoc.py  molecule.py
src/moldoc/_internal/javascript/: atoms.py  bonds.py  bool.py  material.py  mesh_config.py  scene_config.py
src/moldoc/javascript/: __init__.py  atoms.py  bonds.py  bool.py  color.py  material.py  mesh_config.py  scene_config.py
tests/source/: conf.py  index.rst
tests/source/nest/: foo.rst
tests/source/nest/nest/: index.rst
tests/source/nest/nest/nest/: index.rst
tests/source/nest/nest/nest/nest/nest/: index.rst
