[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "moldoc"
maintainers = [
  { name = "Lukas Turcani", email = "lukasturcani93@gmail.com" },
]
dependencies = [
  "sphinx",
]
requires-python = ">=3.10"
dynamic = ["version"]
readme = "README.rst"

[project.optional-dependencies]
dev = [
  "black",
  "ruff",
  "mypy",
  "build",
  "twine",
  "types-docutils",
  "furo",
]

[project.urls]
github = "https://github.com/lukasturcani/moldoc"

[tool.setuptools.package-data]
stk = [
  "py.typed",
]

[tool.setuptools_scm]
fallback_version = "0.0.0"
write_to = "src/moldoc/version.py"

[tool.black]
line-length = 79

[tool.ruff]
line-length = 79
extend-select = ["I"]

[tool.mypy]
show_error_codes = true
implicit_optional = false
warn_no_return = true
strict_optional = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
warn_unreachable = true

[[tool.mypy.overrides]]
module = []
ignore_missing_imports = true
