[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "moldoc"
maintainers = [
  { name = "Lukas Turcani", email = "lukasturcani93@gmail.com" },
]
dependencies = [
  "sphinx",
]
requires-python = ">=3.10"
dynamic = ["version"]
readme = "README.rst"

[project.optional-dependencies]
dev = [
  "ruff",
  "mypy",
  "build",
  "twine",
  "types-docutils",
  "furo",
]

[project.urls]
github = "https://github.com/lukasturcani/moldoc"

[tool.setuptools_scm]
fallback_version = "0.0.0"
write_to = "src/moldoc/version.py"

[tool.ruff]
line-length = 79
exclude = ["src/moldoc/version.py"]

[tool.ruff.lint]
select = ["ALL"]
ignore = ["ANN101", "ANN401", "COM812", "ISC001"]

[tool.ruff.lint.per-file-ignores]
"tests/source/conf.py" = ["D100", "INP001"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
show_error_codes = true
implicit_optional = false
warn_no_return = true
strict_optional = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
warn_unreachable = true

[[tool.mypy.overrides]]
module = []
ignore_missing_imports = true
